sort.baseball.NaiveBaseball.scala.error
Compilation error:
NaiveBaseball:8: error: value ==- is not a member of Int
    if (posBABouger==-1) {
                   ^